# todo_list

./: .gitignore  LICENSE  README.md  pyproject.toml
tests/: test_models.py  test_service.py
todo_list/: cli.py  models.py  service.py  storage.py
